syntax = "proto3";

option go_package = "protogen/authservice/proto";

import "google/protobuf/timestamp.proto";

service AuthService {
  // Authenticate user and generate JWT token
  rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse);

  // Create a new employee
  rpc CreateEmployee (CreateEmployeeRequest) returns (CreateEmployeeResponse);

  // Update role for an employee
  rpc UpdateRole (UpdateRoleRequest) returns (UpdateRoleResponse);

  // Get employee
  rpc GetEmployee (GetEmployeeRequest) returns (GetEmployeeResponse);

  // List employee
  rpc ListEmployee (ListEmployeeRequest) returns (ListEmployeeResponse);

  // Delete an employee
  rpc DeleteEmployee (DeleteEmployeeRequest) returns (DeleteEmployeeResponse);
}

message AuthenticateRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateResponse {
  string token = 1;
  string refresh_token = 2;
  string message = 3;
}

message CreateEmployeeRequest {
  string username = 1;
  string password = 2;
  string role = 3;
  string requester = 4;
}

message CreateEmployeeResponse {
  string message = 1;
  bool success = 2;
}

message UpdateRoleRequest {
  string username = 1;
  string role = 2;
  string requester = 3;
}

message UpdateRoleResponse {
  string message = 1;
  bool success = 2;
}

message GetEmployeeRequest {
  string username = 1;
  string role = 2;
  string requester = 3;
}

message GetEmployeeResponse {
  string id = 1;
  string name = 2;
  string role = 3;
  string message = 4;
  bool success = 5;
}

message ListEmployeeRequest {
  string sort_order = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListEmployeeResponse {
  repeated Employee employees = 1;
  int32 page = 2;
  int32 page_size = 3;
  int32 total_count = 4;
  int32 total_pages = 5;
  string message = 6;
  bool success = 7;
}

message Employee {
  string id = 1;
  string user_name = 2;
  string role = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message DeleteEmployeeRequest {
  string username = 1;
  string requester = 2;
}

message DeleteEmployeeResponse {
  string message = 1;
  bool success = 2;
}
